--- a/base.html
+++ b/base.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>HTML base, startdokument</title>
+  <title>Sigma Siten</title>
   <link rel="stylesheet" href="reset.css">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header class="d-flex">
-    <h1>HTML base, startdokument</h1>
+    <h1>Hejsan</h1>
     <svg width="100" height="100" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
       <rect x="10" y="10" width="80" height="80" stroke="black" stroke-width="3" fill="white" />
       <text x="50%" y="50%" text-anchor="middle" stroke="#000" stroke-width="1px" dy=".3em">Logo</text>
@@ -17,26 +17,26 @@
   </header>
   <main class="d-flex2">
     <div class="card">
-      <h2>Card</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam, quod.</p>
+      <h2>POTATIS</h2>
+      <p>potatis</p>
     </div>
     <div class="card card--image">
-      <h2>Card</h2>
-      <img src="https://picsum.photos/200/300" alt="Random image">
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea nemo voluptatem, harum vitae ab, alias facilis neque possimus repudiandae, rem aliquam fuga ipsum velit aut veritatis optio non deleniti vel?</p>
+      <h2>SELFIE</h2>
+      <img src="jag dö.JPG" alt="JAG DÖ">
+      <p>jag tappade telefonen medans jag tog bilden</p>
     </div>
     <div class="card">
-      <h2>Card</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam, quod.</p>
+      <h2>2 FÖR 30!</h2>
+      <p>Massiva julmust flaskor säljs 2 för 28kr + pant!</p>
     </div>
     <div class="card">
-      <h2>Card</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam, quod.</p>
+      <h2>HAMBURGARE</h2>
+      <p>gött med en BURGARE</p>
     </div>
     <div class="card card--image">
-      <h2>Card</h2>
-      <img src="https://picsum.photos/200/300" alt="Random image">
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea nemo voluptatem, harum vitae ab, alias facilis neque possimus repudiandae, rem aliquam fuga ipsum velit aut veritatis optio non deleniti vel?</p>
+      <h2>SELFIE #2</h2>
+      <img src="jag dö.JPG" alt="JAG DÖ">
+      <p>jag råkade tappa telefonen igen</p>
     </div>
   </main>
   <footer class="d-flex">
